--- a/ssgsea-params.yaml
+++ b/ssgsea-params.yaml
@@ -3,8 +3,8 @@
 ssgsea: 
  nperm: 1000
  weight: 0.75
- norm: "rank"                  ## rank, log, log.rank, none
- correl_type: "z.-score"       ## "rank", "z.score", "symm.rank"
+ sample_norm_type: "rank"      ## rank, log, log.rank, none
+ correl_type: "z-score"        ## "rank", "z.score", "symm.rank"
  statistic: "area.under.RES"   ## "area.under.RES", "Kolmogorov-Smirnov" 
  output_score_type: "NES"      ## 'Score type: "ES" - enrichment score,  "NES" - normalized ES'
  min_overlap: 10               ## 'Minimal overlap between signature and data set.'
