--- a/ssgsea-params.yaml
+++ b/ssgsea-params.yaml
@@ -4,7 +4,7 @@ ssgsea:
  nperm: 1000
  weight: 0.75
  sample_norm_type: "rank"      ## rank, log, log.rank, none
- correl_type: "z-score"        ## "rank", "z.score", "symm.rank"
+ correl_type: "z.score"        ## "rank", "z.score", "symm.rank"
  statistic: "area.under.RES"   ## "area.under.RES", "Kolmogorov-Smirnov" 
  output_score_type: "NES"      ## 'Score type: "ES" - enrichment score,  "NES" - normalized ES'
  min_overlap: 10               ## 'Minimal overlap between signature and data set.'
